--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Bento</title>
+    <title>Home Page</title>
     <link rel=" shortcut icon" type="image/png" href="icons/favicon.png" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -58,31 +58,31 @@
         </a>
         <a
           target="blank"
-          href="https://outlook.live.com/mail/inbox"
+          href="e.mail.ru"
           class="buttonLink__link card buttonLink__link-2"
         >
-          <i class="buttonLink__icon" data-feather="mail"></i>
+          <img src="icons/mailru.png" />
         </a>
         <a
           target="blank"
-          href="https://calendar.google.com/calendar/r"
+          href="mail.google.com"
           class="buttonLink__link card buttonLink__link-3"
         >
-          <i class="buttonLink__icon" data-feather="calendar"></i>
+          <img src="icons/gmail.png" />
         </a>
         <a
           target="blank"
-          href="https://flipboard.com/"
+          href="https://yts.mx"
           class="buttonLink__link card buttonLink__link-4"
         >
-          <i class="buttonLink__icon" data-feather="bookmark"></i>
+          <img src="icons/yts.png" />
         </a>
         <a
-          href="https://columns.app"
+          href="https://reddit.com"
           target="blank"
           class="buttonLink__link card buttonLink__link-5"
         >
-          <i class="buttonLink__icon" data-feather="trello"></i>
+          <img src="icons/reddit.png" />
         </a>
         <a
           target="blank"
