fixed icons & weather

--- a/index.html
+++ b/index.html
@@ -58,31 +58,31 @@
         </a>
         <a
           target="blank"
-          href="e.mail.ru"
+          href="https://e.mail.ru/inbox"
           class="buttonLink__link card buttonLink__link-2"
         >
-          <img src="icons/mailru.png" />
+          <img src="icons/mailru.svg" />
         </a>
         <a
           target="blank"
           href="mail.google.com"
           class="buttonLink__link card buttonLink__link-3"
         >
-          <img src="icons/gmail.png" />
+          <img src="icons/gmail.svg" />
         </a>
         <a
           target="blank"
           href="https://yts.mx"
           class="buttonLink__link card buttonLink__link-4"
         >
-          <img src="icons/yts.png" />
+          <img src="icons/yts.svg" />
         </a>
         <a
           href="https://reddit.com"
           target="blank"
           class="buttonLink__link card buttonLink__link-5"
         >
-          <img src="icons/reddit.png" />
+          <img src="icons/reddit.svg" />
         </a>
         <a
           target="blank"
