Added personal links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Home Page</title>
-    <link rel=" shortcut icon" type="image/png" href="icons/favicon.png" />
+    <link rel=" shortcut icon" type="image/png" href="icons/ff.png" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -51,99 +51,82 @@
       <div class="buttonLink">
         <a
           href="https://github.com/"
-          target="blank"
+          target="_self"
           class="buttonLink__link card buttonLink__link-1"
         >
           <i class="buttonLink__icon" data-feather="github"></i>
         </a>
         <a
-          target="blank"
-          href="https://e.mail.ru/inbox"
+          target="_self"
+          href="https://www.youtube.com/"
           class="buttonLink__link card buttonLink__link-2"
         >
-          <img src="icons/mailru.svg" />
+          <i class="buttonLink__icon" data-feather="youtube"></i>
         </a>
         <a
-          target="blank"
-          href="mail.google.com"
-          class="buttonLink__link card buttonLink__link-3"
-        >
-          <img src="icons/gmail.svg" />
-        </a>
-        <a
-          target="blank"
-          href="https://yts.mx"
-          class="buttonLink__link card buttonLink__link-4"
-        >
-          <img src="icons/yts.svg" />
-        </a>
-        <a
-          href="https://reddit.com"
-          target="blank"
+          target="_self"
+          href="https://www.twitter.com/"
           class="buttonLink__link card buttonLink__link-5"
         >
-          <img src="icons/reddit.svg" />
-        </a>
-        <a
-          target="blank"
-          href="https://www.youtube.com/"
-          class="buttonLink__link card buttonLink__link-6"
-        >
-          <i class="buttonLink__icon" data-feather="youtube"></i>
+          <i class="buttonLink__icon" data-feather="twitter"></i>
         </a>
       </div>
 
       <!-- Lists  -->
 
       <div class="card list list__1">
-        <i class="list__head" data-feather="music"></i>
-        <a
-          target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-          class="list__link"
-          >Inspirational</a
+        <i class="list__head" data-feather="mail"></i>
+        <a target="_self" href="https://e.mail.ru" class="list__link"
+          >Mail.ru</a
         >
         <a
-          target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          target="_self"
+          href="https://mail.google.com/mail/u/0/#inbox"
           class="list__link"
-          >Classic</a
+          >Personal</a
         >
         <a
-          target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          target="_self"
+          href="https://mail.google.com/mail/u/1/#inbox"
           class="list__link"
-          >Oldies</a
+          >Tunisia 88</a
         >
         <a
-          target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          target="_self"
+          href="https://mail.google.com/mail/u/2/#inbox"
           class="list__link"
-          >Rock</a
+          >University</a
+        >
+        <a
+          target="_self"
+          href="https://mail.google.com/mail/u/3/#inbox"
+          class="list__link"
+          >Freeways</a
         >
       </div>
 
       <div class="card list list__2">
-        <i class="list__head" data-feather="coffee"></i>
-        <a href="https://www.linkedin.com" target="blank" class="list__link"
-          >LinkedIn</a
+        <i class="list__head" data-feather="star"></i>
+        <a href="https://www.reddit.com" target="_self" class="list__link"
+          >Reddit</a
         >
-        <a href="https://dribbble.com/" target="blank" class="list__link"
-          >Dribble</a
-        >
-        <a href="https://www.udemy.com/" target="blank" class="list__link"
-          >Udemy</a
-        >
+        <a href="https://yts.mx/" target="_self" class="list__link">YTS</a>
         <a
-          href="https://www.figma.com/files/recent"
+          href="https://drive.google.com/drive/u/0/my-drive"
           target="blank"
           class="list__link"
-          >Figma</a
+          >Google Drive</a
+        >
+        <a href="https://www.twist.moe" target="_self" class="list__link"
+          >Twist</a
+        >
+        <a href="https://aur.archlinux.org/" target="_self" class="list__link"
+          >AUR</a
         >
       </div>
     </div>
 
-    <!-- Scrips  -->
+    <!-- Scripts  -->
 
     <script src="js/time.js"></script>
     <script src="js/theme.js"></script>
