--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <title>Home Page</title>
     <link rel=" shortcut icon" type="image/png" href="icons/ff.png" />
-
     <link rel="stylesheet" href="css/style.css" />
-
     <script src="https://unpkg.com/feather-icons"></script>
   </head>
-
   <body class="">
     <button id="themeButton">
       <i id="themeButton__icon" data-feather="moon"></i>
@@ -24,6 +21,22 @@
           <div id="minutes" class=""></div>
         </div>
         <div id="greetings" class=""></div>
+        <div class="wrap">
+          <input
+            class="search"
+            type="text"
+            placeholder="Search.."
+            name="search"
+            id="inp"
+          />
+          <a
+            target="_self"
+            href=""
+            onClick="this.href='https://searx.fmac.xyz/search?q='+document.getElementById('inp').value"
+          >
+            <i class="buttonLink__search" data-feather="search"></i>
+          </a>
+        </div>
       </div>
 
       <!-- Date and Weather  -->
