--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
         <a
           target="_self"
-          href="https://mail.tutanota.com/login"
+          href="https://app.tuta.com"
           class="list__link"
         >
           Tutanota
